# research-workspace

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  app.py  pyproject.toml
contracts/: application_command.schema.json  audit_change.schema.json  background_operation.schema.json  domain_model.json  event_contract.schema.json  parsed_document.schema.json  parser_config.schema.json  permission_context.schema.json  provider_interfaces.md  task_contract.schema.json  task_result.schema.json
docs/: ARCHITECTURE.md  CODEX_INSTRUCTIONS.md  GATE2_FREEZE.md  PRD.docx  PRD.md  UI_SPEC.md
docs/design/: design-system.md
docs/ux/: ux01-research-flow-validation.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_foundation_schema.py  0002_gate1_import_parse.py  0003_gate2_monitoring.py  0004_gate3_protected_crud.py
packaging/windows/: build_manifest.py  build_portable.ps1  research_workspace.spec
src/research_workspace/: __init__.py  bootstrap.py
tests/: conftest.py
tests/acceptance/: test_data_directory_restart.py  test_environment.py  test_license_policy.py  test_offline_startup.py  test_repository_structure.py
tests/contracts/: test_domain_event.py  test_parsed_document.py  test_parsed_document_semantics.py  test_task_contract.py  test_task_result.py
tests/gate1/: conftest.py
tests/gate2/: conftest.py
tests/integration/: conftest.py  test_audit_undo_uniqueness.py  test_fresh_database.py  test_migrations.py  test_relation_observations.py  test_schema_contract.py  test_task_attempt_schema.py  (+1 more)
ui/: research_workspace_main.ui
(+308 files in other folders)
