[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"
[project]
name = "research-workspace"
version = "0.1.0"
description = "Local-first research context workspace"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.14,<2",
  "jsonschema>=4.23,<5",
  "platformdirs>=4,<5",
  "pypdf>=6.14.2",
  "PySide6>=6.8,<6.12",
  "python-docx>=1.2.0",
  "python-pptx>=1.0.2",
  "rfc3339-validator>=0.1.4,<0.2",
  "rfc8785>=0.1,<1",
  "SQLAlchemy>=2.0,<2.1",
]
[dependency-groups]
dev = [
  "pip-licenses>=5,<6",
  "pytest>=9,<10",
  "pytest-qt>=4.4,<5",
  "pytest-socket>=0.7,<1",
]
[tool.hatch.build.targets.wheel]
packages = ["src/research_workspace"]
[tool.hatch.build.targets.wheel.force-include]
"src/research_workspace/presentation/ui" = "research_workspace/presentation/ui"
[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = ["error"]
